# mycobot-280

./: .gitignore  CMakeLists.txt  README.md
clion_scripts/: clion_build.sh  envvars.txt
docker/: Dockerfile  entrypoint.sh  startcontainer.sh
mycobot280_ws/analysis/rotation_matrices/: README.md  rotation_matrices.py
mycobot280_ws/analysis/translation_vectors/: README.md
mycobot280_ws/src/mycobot_description/launch/: robot_state_publisher.launch.py
